2013-06-27
* extract information from module_param and module_param_named

2013-06-24
* start on making reports for function names that are more useful than just a
list of function names. This still needs a lot of work, similar to the unique
matches for string matches.

2013-06-23
* pass 'debug' to individual scans (except for pretty printers)
* add reports with distribution checks to reports. This still needs some more
work to make it look good.

2013-06-22
* add check for matching consistency of architecture and versions of Linux
kernel modules
* make main report in GUI easier to navigate, plus reorder results a bit
(string matches first, then function matches)
* start reworking file2package

2013-06-20
* add more function names to the list of standard interfaces

2013-06-19
* display dynamic ELF pictures in GUI
* tag Linux kernel and (some) kernel modules in the GUI

2013-06-17
* actually commit script to compare two unpacked binaries/firmwares for
differences
* add program to compare a source code archive based on results generated with
BAT

2013-06-13
* filter out new format (Linux kernel 3.6 and later) for KERN_ERR and friends
in ranking.py.
* filter function names from the kernel (not reported yet)
* add script to compare two unpacked binaries/firmwares for differences

2013-06-11
* rename xmloutput to ppoutput. Allow for separate modules for storing per
scans pretty printers, so people wanting to have custom pretty printers do not
have to overwrite the existing modules, but can use a parallel set of pretty
printers instead.

2013-06-10
* extract functions from the Linux kernel, and also extract more strings that
can be found in __ATTR and friends: xgettext won't catch them, so some regular
expression magic is needed.

2013-06-08
* split lookup of kernel symbols, lookup symbols for kernels that are not in
ELF format
* store function names from the Linux kernel as 'kernelfunction'

2013-06-07