@@ -7,6 +7,7 @@ multiprocessing = yes
 module = bat.simpleprettyprint
 output = prettyprintresxml
 outputlite = no
+processors = 2
 
 ############################
 ### viewer configuration ###
